Added custom-roles amdn management APIs
